# copilot

./: .gitignore  CLAUDE.md  README.md
.claude/: settings.local.json
backend/: .env.example  pyproject.toml
backend/src/: agent_loop.py  chroma_store.py  database.py  document_parser.py  embedder.py  llm.py  main.py  models.py  splitter.py  tools.py  workflows.py
backend/tests/: test_agent_loop.py  test_api.py  test_chroma_store.py  test_database.py  test_document_parser.py  test_embedder.py  test_llm.py  test_models.py  test_splitter.py  test_tools.py  test_workflows.py
docs/: architecture.md  troubleshooting.md
docs/superpowers/plans/: 2026-05-19-enterprise-doc-copilot-plan.md
docs/superpowers/specs/: 2026-05-19-enterprise-doc-copilot-design.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/pages/: DocManager.tsx  QAPage.tsx
frontend/src/types/: index.ts
